<resources>
    <string name="app_name">eSports</string>
    <string name="next_tournaments">Next Tournaments:</string>
    <string name="prize_header">Prize:</string>
    <string name="tournaments">Tournaments</string>
    <string name="teams">Teams</string>
    <string name="newest">Newest</string>
    <string name="older">Older</string>
    <string name="winner">Winner team</string>
    <string name="logo_team">logo team</string>
    <string name="name">Name</string>
    <string name="add_new_tournament">Add new tournament</string>
    <string name="manager">Manager</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="start_date">Start dd/mm/yyyy</string>
    <string name="end_date">End dd/mm/yyyy</string>
    <string name="prize">Prize</string>
    <string name="save">Save</string>
    <string name="missing_fields">Missing required fields</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_or_register">SIGN IN OR REGISTER</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="user_name">User name</string>
    <string name="actions">Actions</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="auth_remove_tournament">Selected tournament will be deleted</string>
    <string name="auth_remove_team">Selected team will be deleted</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_logged">User logged</string>
    <string name="user_registered">User registered</string>
    <string name="required_user_logged">Required user logged in delete actions</string>
    <string name="add_new_team">Add new team</string>
    <string name="representative">Representative</string>
    <string name="phone">Phone</string>
    <string name="partner">Partner</string>
    <string name="address">Address</string>
    <string name="region_NA">North America</string>
    <string name="region_SA">South America</string>
    <string name="region_EU">Europe</string>
    <string name="region_AS">Asia</string>
    <string name="region_OC">Oceania</string>
    <string name="user_image">User image</string>
    <string name="alias">Alias</string>
    <string name="db_error">Failed to retrieve user data</string>
    <string name="sign_out">Sign out</string>
    <string name="my_zone">My Zone</string>
    <string name="role">Role</string>
    <string name="role_tank">Tank</string>
    <string name="role_dps">DPS</string>
    <string name="role_support">Support</string>
    <string name="delete_user_data">All user data will be deleted</string>
    <string name="save_user_data">Save user data?</string>
    <string name="user_data_saved">User data saved</string>
    <string name="user_data_deleted">User data deleted</string>
    <string name="new_image">New image</string>
    <string name="camera">Camera</string>
    <string name="users_in_device">Users in device</string>
    <string name="hi">Hi, </string>
    <string name="tournament_null">Tournament null</string>
    <string name="team_null">Team null</string>
    <string name="required_logged_mark_favorite">Required user logged to select favourites</string>
</resources>