<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".view.user.ZoneUserView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageUser"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/user_image"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/no_photos" />

        <EditText
            android:id="@+id/editAliasUserData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/alias"
            android:inputType="text"
            android:minHeight="48dp" />

        <Spinner
            android:id="@+id/editRegionUserData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="start"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonTank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/role_tank" />

            <RadioButton
                android:id="@+id/radioButtonDps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/role_dps" />

            <RadioButton
                android:id="@+id/radioButtonSupport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/role_support" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/users_in_device" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listUserRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>