<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="120dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="20dp"
    tools:context=".view.team.FormTeamView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTeamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTeamRepresentative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/representative"
            android:inputType="text"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTeamPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:minHeight="48dp" />

            <CheckBox
                android:id="@+id/editTeamPartner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/partner"
                android:textSize="18sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTeamAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="text"
            android:minHeight="48dp" />

        <Spinner
            android:id="@+id/editTeamRegion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/saveNewTeamButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="onClickSaveTeam"
            android:text="@string/save"
            app:icon="@android:drawable/ic_menu_save" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>