<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingTop="120dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    tools:context=".view.TournamentFormView" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTournamentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTournamentManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/manager"
            android:inputType="text"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTournamentCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTournamentCountry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/country"
                android:inputType="text"
                android:minHeight="48dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTournamentStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/start_date"
                android:inputType="date"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTournamentEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/end_date"
                android:inputType="date"
                android:minHeight="48dp" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTournamentPrize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prize"
            android:inputType="number|numberDecimal"
            android:minHeight="48dp" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentMapForm"
            android:name="com.svalero.tournaments.fragment.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Long: " />

            <TextView
                android:id="@+id/editTournamentLong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="/ Lat:" />

            <TextView
                android:id="@+id/editTournamentLat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />
        </LinearLayout>

        <Button
            android:id="@+id/saveNewTournamentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickSaveTournament"
            android:text="@string/save"
            app:icon="@android:drawable/ic_menu_save" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>